# wrist-segmentation

./: .gitignore  CITATION.cff  README.md  augment_data.py  definitions.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
configs/: config.yaml  config_knee.yaml  config_test.yaml  unet.yaml  unet_al.yaml  unet_tr.yaml  unet_tr_al.yaml
models/UNet_AL_4down_4up_/: UNet_AL_model.60-0.7425-0.010246_20220329-165505.h5
notebooks/: test.ipynb
wrist_segmentation/: main.py
wrist_segmentation/data/: __init__.py  loader.py  preprocess.py
wrist_segmentation/data/loader/: loader.py
wrist_segmentation/data/preprocess/: preprocess.py
wrist_segmentation/models/: BaseModel.py  UNet.py  UNet_AL.py  UNet_AL_2.py  UNet_AL_3.py  UNet_AL_ini.py
wrist_segmentation/report/: results.py
wrist_segmentation/utils/: callbacks.py  config.py  metrics.py  other.py
