[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wrist_segmentation"
version = "0.9.0"
description='Segmentation of a wrist cartilage on MRI'
authors = [
  {email = "vladimnikita@gmail.com"},
  {name = "Nikita Vladimirov"}
]

[tool.setuptools.packages.find]
where = ["wrist_segmentation"]  # ["."] by default
include = ["wrist_segmentation*"]  # ["*"] by default
namespaces = false  # true by default
